# link-shortener

./: .gitignore  Dockerfile  README.md  admin.html  pyproject.toml  shortener.py
templates/: admin.html
